feat: wire Supabase + fix Gemini wrapper

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@google/genai": "^1.25.0",
+    "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.75.1",
+    "howler": "^2.2.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "howler": "^2.2.4"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
